k8s/dev/webapp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp
  namespace: dev
spec:
  selector:
    app: webapp
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
